# internal/db/models.go
@@ -48,6 +48,17 @@ type User struct {
 	HashedPassword    string           `json:"hashed_password"`
 	FullName          string           `json:"full_name"`
 	Email             string           `json:"email"`
+	IsEmailVerified   bool             `json:"is_email_verified"`
 	PasswordChangedAt pgtype.Timestamp `json:"password_changed_at"`
 	CreatedAt         pgtype.Timestamp `json:"created_at"`
+}
+
+type VerifyEmail struct {
+	ID         int32            `json:"id"`
+	Username   string           `json:"username"`
+	Email      string           `json:"email"`
+	SecretCode string           `json:"secret_code"`
+	IsUsed     bool             `json:"is_used"`
+	CreatedAt  pgtype.Timestamp `json:"created_at"`
+	ExpiredAt  pgtype.Timestamp `json:"expired_at"`
 }
